# serde_variant

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml  test.yml
ci/: gitlab-ci.yml
src/: de.rs  error.rs  lib.rs  ser.rs
