[package]
name = "serde_variant"
version = "0.1.3"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/serde_variant"
repository = "https://github.com/d-e-s-o/serde_variant.git"
readme = "README.md"
categories = ["value-formatting", "encoding", "parsing", "data-structures"]
keywords = ["serialization", "serde", "enum", "variants"]
description = """
Retrieve serde provided variant names for enum objects.
"""

[dependencies]
serde = {version = "1.0", default-features = false}

[dev-dependencies]
serde = {version = "1.0", default-features = false, features = ["derive"]}
